<resources>
    <string name="app_name">SqliteStudy</string>
    <string name="name">Name</string>
    <string name="customer_name">Customer Name</string>
    <string name="age">Age</string>
    <string name="active_customer">Active Customer</string>
    <string name="view_all">VIEW</string>
    <string name="add">ADD</string>
    <string name="necessary_field">Necessary Field</string>
    <string name="delete_all">Delete All</string>
    <string name="clear">CLEAR</string>
</resources>